--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
       <div class="wind">Wind speed: 6.2 km/h</div>
     </div>
   </div>
+  
+  <div style=" padding: 0.3rem !important;
+            border-color: inherit;
+              border-style: solid;
+              border-width: 0;
+            background-color: #212529 !important;
+            " class="footer">
+            <h4 style="color: white; text-align: center;">Designed & Developed with &#10084;&#65039; by Atif</h4>
+        </div>
 </body>
 
 </html>
