--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             background-color: #212529 !important;
             " >
             <h4 style="color: white; text-align: center;">Designed & Developed with &#10084;&#65039; by Atif</h4>
-        </div>
+        </div><br>
   <div class="card">
     <div class="search">
       <input type="text" class="search-bar" placeholder="Search">
