--- a/index.html
+++ b/index.html
@@ -7,19 +7,13 @@
   <title>Weather App</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
-  <script src="./script.js" defer></script>
+
 </head>
 
 <body>
-  <div style=" padding: 0.3rem !important;
-            border-color: inherit;
-              border-style: solid;
-              border-width: 0;
-            background-color: #212529 !important;
-            " >
-            <h4 style="color: white; text-align: center;">Designed & Developed with &#10084;&#65039; by Atif</h4>
-        </div><br>
+  <div>
   <div class="card">
     <div class="search">
       <input type="text" class="search-bar" placeholder="Search">
@@ -41,8 +35,21 @@
       <div class="wind">Wind speed: 6.2 km/h</div>
     </div>
   </div>
-  
-  
+  <br>
+  <br>
+  <div style="position:absolute; padding: 0.4rem !important;margin: 10px;
+            border-color: inherit;
+              border-style: solid;
+              border-width: 0;
+            background-color: #212529 !important;
+            " class="footer">
+            <h4 style="color: white; text-align: center;">Designed & Developed with &#10084;&#65039; by Atif</h4>
+        </div>
+      </div>
+
+
+      <script src="./script.js" defer></script>
 </body>
 
 </html>
+
